gitops/clusters/homelab/apps/private/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: private
spec:
  selector:
    app: headlamp
  ports:
    - port: 4466
      targetPort: 4466
