gitops/clusters/homelab/apps/private/headlamp/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: private
spec:
  entryPoints:
    - private-web-secure
  routes:
    - match: Host(`headlamp.internal.pavel-usanli.online`)
      kind: Rule
      services:
        - name: headlamp
          port: 4466
  tls:
    certResolver: cloudflare
